# SmartMeal

./: README.md  db.py  main.py  models.py  pyproject.toml
src/smart_meal/: __init__.py
