[project]
name = "smart-meal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yinon Horev", email = "yinon.horev@pon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
smart-meal = "smart_meal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
